stop button z-index

--- a/src/app/stop-button/stop-button.component.scss
+++ b/src/app/stop-button/stop-button.component.scss
@@ -26,6 +26,7 @@
   top: 50%;
   transform: translateY(-50%);
   cursor: pointer;
+  z-index: 999;
 
   &:active {
     @extend .stop-button-active;
